<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.dmitry.montyhallapp.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_door1"
            android:layout_width="139dp"
            android:layout_height="177dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/door" />

        <ImageView
            android:id="@+id/iv_door2"
            android:layout_width="139dp"
            android:layout_height="177dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/door" />

        <ImageView
            android:id="@+id/iv_door3"
            android:layout_width="139dp"
            android:layout_height="177dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/door" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_door1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Choice" />

        <Button
            android:id="@+id/btn_door2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Choice" />

        <Button
            android:id="@+id/btn_door3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Choice" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/tv_changequestion"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_notchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_notChangeChoice"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_changeChoice"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_youwin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_youWinText"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_newGame"
        android:visibility="invisible" />
</LinearLayout>
